opam-version: "2.0"
maintainer: "Etienne Millon <etienne@cryptosense.com>"
authors: "Etienne Millon <etienne@cryptosense.com>"
homepage: "https://github.com/cryptosense/ocaml-mock"
bug-reports: "https://github.com/cryptosense/ocaml-mock/issues"
license: "BSD-2"
dev-repo: "git+https://github.com/cryptosense/ocaml-mock.git"
doc: "https://cryptosense.github.io/ocaml-mock/doc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "mock"
  "ounit"
]
